# obs-cr

./: .gitignore  CNAME  README.md  acme.sh  control.py  index.html  make-zip-app.sh  preview.html  preview.py  pyproject.toml  requirements.txt
.github/workflows/: gh-pages.yml  python-app.yml
obs_cr/: __init__.py  __main__.py  config.yaml  control.py  headless.py  obsdict.py  preview.py  websocket_proxy.py
web/: annunciators.html  config.yaml  control.js  director.html  index.html  preview.html  small.html  sound  tablet-instructors.html  tablet.html  util.js
